package org.xiaoxiancai.imhere.common.protos;

option java_package = "org.xiaoxiancai.imhere.common.protos.common";
option java_outer_classname = "BusinessTypeProtos";

// 业务类型
enum BusinessType {

	option allow_alias = true;
	
	REGISTER = 0; // 注册
	
	UPDATE = 1; // 更新
	
	LOCATE = 2; // 定位
	
	LOGIN = 3; // 登录
}